--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ multidict==6.1.0
 openai==1.47.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dotenv==1.0.1
 sniffio==1.3.1
 tqdm==4.66.5
 typing_extensions==4.12.2
